introduce no-sql-model

--- a/10--sql-database/01--postgresql.ipynb
+++ b/10--sql-database/01--postgresql.ipynb
@@ -2,56 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Collecting psycopg2\n",
-      "  Using cached psycopg2-2.8.6.tar.gz (383 kB)\n",
-      "\u001b[31m    ERROR: Command errored out with exit status 1:\n",
-      "     command: /Users/jkanclerz/myplace/dydaktyka/przetwarzanie-dokumnetow/data-science-workshops-2021/.venv/bin/python3 -c 'import sys, setuptools, tokenize; sys.argv[0] = '\"'\"'/private/var/folders/j0/p37k07nj23b114ppnwfsj45m0000gn/T/pip-install-foqtdhuw/psycopg2/setup.py'\"'\"'; __file__='\"'\"'/private/var/folders/j0/p37k07nj23b114ppnwfsj45m0000gn/T/pip-install-foqtdhuw/psycopg2/setup.py'\"'\"';f=getattr(tokenize, '\"'\"'open'\"'\"', open)(__file__);code=f.read().replace('\"'\"'\\r\\n'\"'\"', '\"'\"'\\n'\"'\"');f.close();exec(compile(code, __file__, '\"'\"'exec'\"'\"'))' egg_info --egg-base /private/var/folders/j0/p37k07nj23b114ppnwfsj45m0000gn/T/pip-pip-egg-info-e2hhqtig\n",
-      "         cwd: /private/var/folders/j0/p37k07nj23b114ppnwfsj45m0000gn/T/pip-install-foqtdhuw/psycopg2/\n",
-      "    Complete output (23 lines):\n",
-      "    running egg_info\n",
-      "    creating /private/var/folders/j0/p37k07nj23b114ppnwfsj45m0000gn/T/pip-pip-egg-info-e2hhqtig/psycopg2.egg-info\n",
-      "    writing /private/var/folders/j0/p37k07nj23b114ppnwfsj45m0000gn/T/pip-pip-egg-info-e2hhqtig/psycopg2.egg-info/PKG-INFO\n",
-      "    writing dependency_links to /private/var/folders/j0/p37k07nj23b114ppnwfsj45m0000gn/T/pip-pip-egg-info-e2hhqtig/psycopg2.egg-info/dependency_links.txt\n",
-      "    writing top-level names to /private/var/folders/j0/p37k07nj23b114ppnwfsj45m0000gn/T/pip-pip-egg-info-e2hhqtig/psycopg2.egg-info/top_level.txt\n",
-      "    writing manifest file '/private/var/folders/j0/p37k07nj23b114ppnwfsj45m0000gn/T/pip-pip-egg-info-e2hhqtig/psycopg2.egg-info/SOURCES.txt'\n",
-      "    \n",
-      "    Error: pg_config executable not found.\n",
-      "    \n",
-      "    pg_config is required to build psycopg2 from source.  Please add the directory\n",
-      "    containing pg_config to the $PATH or specify the full executable path with the\n",
-      "    option:\n",
-      "    \n",
-      "        python setup.py build_ext --pg-config /path/to/pg_config build ...\n",
-      "    \n",
-      "    or with the pg_config option in 'setup.cfg'.\n",
-      "    \n",
-      "    If you prefer to avoid building psycopg2 from source, please install the PyPI\n",
-      "    'psycopg2-binary' package instead.\n",
-      "    \n",
-      "    For further information please check the 'doc/src/install.rst' file (also at\n",
-      "    <https://www.psycopg.org/docs/install.html>).\n",
-      "    \n",
-      "    ----------------------------------------\u001b[0m\n",
-      "\u001b[31mERROR: Command errored out with exit status 1: python setup.py egg_info Check the logs for full command output.\u001b[0m\n",
-      "\u001b[33mWARNING: You are using pip version 20.1.1; however, version 20.2.4 is available.\n",
-      "You should consider upgrading via the '/Users/jkanclerz/myplace/dydaktyka/przetwarzanie-dokumnetow/data-science-workshops-2021/.venv/bin/python3 -m pip install --upgrade pip' command.\u001b[0m\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "!pip install psycopg2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,35 +42,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Print PostgreSQL version\n",
+    "cursor = connection.cursor()\n",
     "cursor.execute(\"SELECT version();\")\n",
     "record = cursor.fetchone()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "('PostgreSQL 11.6 on x86_64-alpine-linux-musl, compiled by gcc (Alpine 8.3.0) 8.3.0, 64-bit',)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(record)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,17 +94,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "PostgreSQL connection is closed\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "try:\n",
     "    connection = connect_db()\n",
@@ -170,18 +115,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Error while inserting tuple index out of range\n",
-      "PostgreSQL connection is closed\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "insert_sql = '''\n",
     "INSERT INTO Employee (name, sallary) VALUES (%s,%s)\n",
@@ -204,17 +140,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "PostgreSQL connection is closed\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "select = '''\n",
     "    select * from Employee;\n",
@@ -237,19 +165,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(records)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Play with events sale system\n",
+    "\n",
+    "```python\n",
+    "def connect_db():\n",
+    "    connection = psycopg2.connect(user=\"datascience\",\n",
+    "                                  password=\"datascience\",\n",
+    "                                  host=\"127.0.0.1\",\n",
+    "                                  port=\"5432\",\n",
+    "                                  database=\"warehouse\")\n",
+    "    return connection\n",
+    "```\n",
+    "\n",
+    "```\n",
+    "http://{virtual_machine_ip}:8080\n",
+    "user: datascience\n",
+    "password: datascience\n",
+    "database: warehouse\n",
+    "```\n"
    ]
   },
   {
