--- a/21--no-sql-database-mongo/04--document-database_mongodb.ipynb
+++ b/21--no-sql-database-mongo/04--document-database_mongodb.ipynb
@@ -8,51 +8,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "SQL vs noSql databases\n",
-    "\n",
-    "![](../images/sqlvsmongo.png)\n",
-    "\n",
-    "| field   |      1974      |  2014 |\n",
-    "|----------|:-------------:|------:|\n",
-    "| Business Data Goals |  daily transactions, nightly raports | continues, realtime |\n",
-    "| Release Schedule |    Semi-Annually   |   continues |\n",
-    "\n",
-    "    \n",
-    "    \n",
-    "\n",
-    "Document databases\n",
-    "------------------\n",
-    "\n",
-    "* What is document\n",
-    "    * What is not\n",
-    "        Not pdf, or .doc or docx or excel\n",
-    "    * More like\n",
-    "        * associative array\n",
-    "        * Document == Json Object\n",
-    "        * Document == Python Dict\n",
-    "        * Document == Java Map\n",
-    "        * Document == Ruby Hash\n",
-    "\n",
-    "props\n",
-    "------\n",
-    "* TIME TO MARKET\n",
-    "* Flexible SCHAMA\n",
-    "* No Schema manipulation when data changes\n",
-    "* Oriented toward programmers\n",
-    "* Flexible deployment\n",
-    "    * Laptop\n",
-    "    * server\n",
-    "    * multiple servers\n",
-    "    * SAAS\n",
-    "* Aggregation framework\n",
-    "\n",
-    "\n"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
@@ -61,34 +16,25 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Requirement already satisfied: pymongo in /Users/jkanclerz/myplace/dydaktyka/przetwarzanie-dokumnetow/data-science-workshops-2021/.venv/lib/python3.8/site-packages (3.11.1)\n",
+      "Collecting pymongo\n",
+      "  Using cached pymongo-3.11.1-cp38-cp38-macosx_10_9_x86_64.whl (380 kB)\n",
+      "Installing collected packages: pymongo\n",
+      "Successfully installed pymongo-3.11.1\n",
       "\u001b[33mWARNING: You are using pip version 20.1.1; however, version 20.2.4 is available.\n",
-      "You should consider upgrading via the '/Users/jkanclerz/myplace/dydaktyka/przetwarzanie-dokumnetow/data-science-workshops-2021/.venv/bin/python3 -m pip install --upgrade pip' command.\u001b[0m\n"
+      "You should consider upgrading via the '/Users/jkanclerz/.venv/bin/python3 -m pip install --upgrade pip' command.\u001b[0m\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
      ]
     }
    ],
    "source": [
-    "#Connect to database\n",
-    "!pip install pymongo"
+    "pip install pymongo"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'pymongo'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-5-d037140837c5>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0mpymongo\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mMongoClient\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mpprint\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mpprint\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mpp\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mclient\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mMongoClient\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'mongodb://192.168.56.4:27017'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'pymongo'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from pymongo import MongoClient\n",
     "from pprint import pprint as pp\n",
@@ -97,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -134,16 +80,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<pymongo.results.DeleteResult at 0x7f3cb71e7f00>"
+       "<pymongo.results.DeleteResult at 0x109787940>"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -155,16 +101,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<pymongo.results.InsertOneResult at 0x7f3cb71e7eb0>"
+       "<pymongo.results.InsertOneResult at 0x109787f80>"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -175,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -184,14 +130,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[{'_id': ObjectId('5e45bdaf18482dd77aefac09'),\n",
+      "[{'_id': ObjectId('5fb7c0d1fdb0e50ced838eb2'),\n",
       "  'identiffier': 'tesla-s',\n",
       "  'manufacturer': 'Tesla Motors NEW'}]\n"
      ]
@@ -203,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -212,14 +158,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'_id': ObjectId('5e45bdaf18482dd77aefac09'),\n",
+      "{'_id': ObjectId('5fb7c0d1fdb0e50ced838eb2'),\n",
       " 'identiffier': 'tesla-s',\n",
       " 'manufacturer': 'Tesla Motors NEW'}\n"
      ]
