--- a/21--no-sql-database-mongo/06--document-database_mongodb--data-analysis.ipynb
+++ b/21--no-sql-database-mongo/06--document-database_mongodb--data-analysis.ipynb
@@ -78,9 +78,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Requirement already satisfied: pymongo in /root/workspace/.venv/lib/python3.7/site-packages (3.10.1)\n",
-      "\u001b[33mWARNING: You are using pip version 19.3.1; however, version 20.0.2 is available.\n",
-      "You should consider upgrading via the 'pip install --upgrade pip' command.\u001b[0m\n"
+      "Requirement already satisfied: pymongo in /Users/jkanclerz/myplace/dydaktyka/przetwarzanie-dokumnetow/data-science-workshops-2021/.venv/lib/python3.8/site-packages (3.11.1)\n",
+      "\u001b[33mWARNING: You are using pip version 20.1.1; however, version 20.2.4 is available.\n",
+      "You should consider upgrading via the '/Users/jkanclerz/myplace/dydaktyka/przetwarzanie-dokumnetow/data-science-workshops-2021/.venv/bin/python3 -m pip install --upgrade pip' command.\u001b[0m\n"
      ]
     }
    ],
@@ -97,7 +97,7 @@
    "source": [
     "from pymongo import MongoClient\n",
     "from pprint import pprint as pp\n",
-    "client = MongoClient('mongodb://localhost:27017')"
+    "client = MongoClient('mongodb://192.168.56.4:27017')"
    ]
   },
   {
@@ -188,34 +188,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'_id': ObjectId('5692a13b24de1e0ce2dfcea8'),\n",
-      " 'actors': ['Rose McGowan',\n",
-      "            'Freddy Rodríguez',\n",
-      "            'Josh Brolin',\n",
-      "            'Marley Shelton'],\n",
-      " 'awards': {'nominations': 2, 'text': '2 nominations.', 'wins': 0},\n",
-      " 'countries': ['USA'],\n",
-      " 'director': 'Robert Rodriguez',\n",
-      " 'genres': ['Action', 'Comedy', 'Horror'],\n",
-      " 'imdb': {'id': 'tt1077258', 'rating': 7.2, 'votes': 160542},\n",
-      " 'plot': 'After an experimental bio-weapon is released, turning thousands into '\n",
-      "         \"zombie-like creatures, it's up to a rag-tag group of survivors to \"\n",
-      "         'stop the infected and those behind its release.',\n",
-      " 'poster': 'http://ia.media-imdb.com/images/M/MV5BMTI0NDQ5MTM2MV5BMl5BanBnXkFtZTcwOTIwMjk2MQ@@._V1_SX300.jpg',\n",
-      " 'rated': 'NOT RATED',\n",
-      " 'released': datetime.datetime(2007, 6, 21, 4, 0),\n",
-      " 'runtime': 105,\n",
-      " 'title': 'Planet Terror',\n",
+      "{'_id': ObjectId('569190cf24de1e0ce2dfcd74'),\n",
+      " 'actors': ['Cüneyt Arkin', 'Haldun Boysan', 'Berda Ceyhan', 'Veysel Diker'],\n",
+      " 'awards': {'nominations': 0, 'text': '', 'wins': 0},\n",
+      " 'countries': ['Turkey'],\n",
+      " 'director': 'Kartal Tibet',\n",
+      " 'genres': ['Action', 'Comedy', 'Sci-Fi'],\n",
+      " 'imdb': {'id': 'tt0808240', 'rating': 1.9, 'votes': 12638},\n",
+      " 'plot': 'A family of Turks try to adapt to life in a new solar system.',\n",
+      " 'poster': 'http://ia.media-imdb.com/images/M/MV5BMTYwOTMwODIxNF5BMl5BanBnXkFtZTcwMjc0NzA0MQ@@._V1_SX300.jpg',\n",
+      " 'rated': None,\n",
+      " 'released': datetime.datetime(2006, 12, 15, 5, 0),\n",
+      " 'runtime': 110,\n",
+      " 'title': 'Turks in Space',\n",
       " 'type': 'movie',\n",
-      " 'writers': ['Robert Rodriguez'],\n",
-      " 'year': 2007}\n"
+      " 'writers': ['Murat Boyacioglu'],\n",
+      " 'year': 2006}\n"
      ]
     }
    ],
@@ -505,7 +500,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.5"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
