--- a/40--spark/01--rdd.ipynb
+++ b/40--spark/01--rdd.ipynb
@@ -9,10 +9,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Requirement already satisfied: pyspark in /usr/lib/python3.7/site-packages (2.4.5)\n",
-      "Requirement already satisfied: py4j==0.10.7 in /usr/lib/python3.7/site-packages (from pyspark) (0.10.7)\n",
-      "\u001b[33mWARNING: You are using pip version 19.2.3, however version 20.0.2 is available.\n",
-      "You should consider upgrading via the 'pip install --upgrade pip' command.\u001b[0m\n"
+      "Requirement already satisfied: pyspark in /usr/local/lib/python3.7/dist-packages (3.0.0)\r\n",
+      "Requirement already satisfied: py4j==0.10.9 in /usr/local/lib/python3.7/dist-packages (from pyspark) (0.10.9)\r\n"
      ]
     }
    ],
@@ -31,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,15 +38,15 @@
     "import os\n",
     "\n",
     "spark = SparkSession.builder \\\n",
-    "    .master(\"local\") \\\n",
-    "    .appName(\"Test it 2\") \\\n",
+    "    .master(\"spark://spark-master:7077\") \\\n",
+    "    .appName(\"Spark master\") \\\n",
     "    .getOrCreate()\n",
     "sc = spark.sparkContext\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -61,15 +59,15 @@
        "        <div>\n",
        "            <p><b>SparkContext</b></p>\n",
        "\n",
-       "            <p><a href=\"http://10.0.2.15:4040\">Spark UI</a></p>\n",
+       "            <p><a href=\"http://6c951c9a7480:4040\">Spark UI</a></p>\n",
        "\n",
        "            <dl>\n",
        "              <dt>Version</dt>\n",
-       "                <dd><code>v2.4.5</code></dd>\n",
+       "                <dd><code>v3.0.0</code></dd>\n",
        "              <dt>Master</dt>\n",
-       "                <dd><code>local</code></dd>\n",
+       "                <dd><code>spark://spark-master:7077</code></dd>\n",
        "              <dt>AppName</dt>\n",
-       "                <dd><code>Test it 2</code></dd>\n",
+       "                <dd><code>Spark master</code></dd>\n",
        "            </dl>\n",
        "        </div>\n",
        "        \n",
@@ -77,10 +75,10 @@
        "        "
       ],
       "text/plain": [
-       "<pyspark.sql.session.SparkSession at 0x7ff1a9692ad0>"
+       "<pyspark.sql.session.SparkSession at 0x7f65a0568be0>"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -95,121 +93,9 @@
    "source": [
     "### Resilient Distributed Dataset or RDD\n",
     "\n",
-    "An RDD is a distributed collection of elements. All work in Spark is expressed as either creating new RDDs, transforming existing RDDs, or calling actions on RDDs to compute a result. Spark automatically distributes the data contained in RDDs across your cluster and parallelizes the operations you perform on them."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "--2020-02-14 18:38:14--  https://s3.eu-central-1.amazonaws.com/jkan.pl/data-science/uek/otomoto.csv\n",
-      "Resolving s3.eu-central-1.amazonaws.com... 52.219.73.88\n",
-      "Connecting to s3.eu-central-1.amazonaws.com|52.219.73.88|:443... connected.\n",
-      "HTTP request sent, awaiting response... 200 OK\n",
-      "Length: 20920699 (20M) [text/csv]\n",
-      "Saving to: 'otomoto.csv'\n",
-      "\n",
-      "otomoto.csv         100%[===================>]  19.95M  2.29MB/s    in 9.2s    \n",
-      "\n",
-      "2020-02-14 18:38:24 (2.18 MB/s) - 'otomoto.csv' saved [20920699/20920699]\n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "!wget https://s3.eu-central-1.amazonaws.com/jkan.pl/data-science/uek/otomoto.csv"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Creating a RDD from a file\n",
-    "The most common way of creating an RDD is to load it from a file. Notice that Spark's textFile can handle compressed files directly."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "raw_data = sc.textFile('otomoto.csv')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "51187"
-      ]
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "raw_data.count()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['\"id\";\"url\";\"Faktura VAT\";\"Marka pojazdu\";\"Model pojazdu\";\"Kategoria\";\"Pojemność skokowa\";\"Liczba miejsc\";\"Zarejestrowany w Polsce\";\"Wersja\";\"Typ\";\"Rok produkcji\";\"Serwisowany w ASO\";\"Leasing\";\"VIN\";\"Homologacja ciężarowa\";\"VAT marża\";\"Pierwszy właściciel\";\"Filtr cząstek stałych\";\"Rodzaj paliwa\";\"Emisja CO2\";\"Kraj pochodzenia\";\"Numer rejestracyjny pojazdu\";\"Bezwypadkowy\";\"Stan\";\"Pierwsza rejestracja\";\"title\";\"price\";\"Skrzynia biegów\";\"Perłowy\";\"Kierownica po prawej (Anglik)\";\"Liczba drzwi\";\"Metalik\";\"Przebieg\";\"Akryl (niemetalizowany)\";\"Możliwość finansowania\";\"Uszkodzony\";\"Oferta od\";\"Kod Silnika\";\"Kolor\";\"Napęd\";\"Moc\"',\n",
-       " '\"6039269187\";\"https://www.otomoto.pl/oferta/renault-fluence-bezwypadkowy-instalacja-gazowa-ID6AI9Nx.html\";\"\";\"Renault\";\"Fluence\";\"Osobowe\";\"1 600 cm3\";\"5\";\"\";\"\";\"Sedan\";\"2013\";\"\";\"\";\"\";\"\";\"\";\"Tak\";\"\";\"Benzyna+LPG\";\"\";\"Czechy\";\"\";\"Tak\";\"Używane\";\"8 listopad 2013\";\"Renault Fluence\";\"25900.0\";\"Manualna\";\"\";\"\";\"4\";\"\";\"172 000 km\";\"Tak\";\"\";\"\";\"Osoby prywatnej\";\"\";\"Biały\";\"Na przednie koła\";\"110 KM\"']"
-      ]
-     },
-     "execution_count": 20,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "raw_data.take(2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "raw_data = sc.textFile('konstytucja.txt')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "808"
-      ]
-     },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "raw_data.count()"
+    "An RDD is a distributed collection of elements. All work in Spark is expressed as either creating new RDDs, transforming existing RDDs, or calling actions on RDDs to compute a result. Spark automatically distributes the data contained in RDDs across your cluster and parallelizes the operations you perform on them.\n",
+    "\n",
+    "https://spark.apache.org/docs/latest/api/python/pyspark.html?highlight=flatmap#pyspark.RDD.cache"
    ]
   },
   {
@@ -288,6 +174,166 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Creating a RDD from a file\n",
+    "The most common way of creating an RDD is to load it from a file. Notice that Spark's textFile can handle compressed files directly."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "file = sc.textFile('konstytucja.txt')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "808"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "file.count()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Konstytucja Rzeczypospolitej Polskiej/Rozdział 1',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " 'Pobrano z Wikiźródeł dnia 02/14/20',\n",
+       " '',\n",
+       " '',\n",
+       " '']"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "file.take(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "filtered = file.filter(lambda x: x != '')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Konstytucja Rzeczypospolitej Polskiej/Rozdział 1',\n",
+       " 'Pobrano z Wikiźródeł dnia 02/14/20',\n",
+       " 'Konstytucja Rzeczypospolitej Polskiej',\n",
+       " 'Rozdział 1',\n",
+       " 'Konstytucja Rzeczypospolitej Polskiej',\n",
+       " 'Rozdział 1 Rzeczpospolita — Rozdział 2 Wolności, prawa i obowiązki człowieka i obywatela, zasady ogólne wolności, prawa osobiste, wolności i prawa polityczne, wolności i prawa ekonomiczne, socjalne i kulturalne, środki ochrony wolności i praw, obowiązki — Rozdział 3 Źródła prawa — Rozdział 4 Sejm i Senat, wybory i kadencja, posłowie i senatorowie, organizacja i działanie, referendum — Rozdział 5 Prezydent Rzeczypospolitej Polskiej — Rozdział 6 Rada Ministrów i administracja rządowa — Rozdział 7 Samorząd terytorialny — Rozdział 8 Sądy i Trybunały, Trybunał Konstytucyjny, Trybunał Stanu — Rozdział 9 Organy kontroli państwowej i ochrony prawa, Najwyższa Izba Kontroli, Rzecznik Praw Obywatelskich, Krajowa Rada Radiofonii i Telewizji — Rozdział 10 Finanse publiczne — Rozdział 11 Stany nadzwyczajne — Rozdział 12 Zmiana Konstytucji — Rozdział 13 Przepisy przejściowe i końcowe',\n",
+       " 'Rozdział I',\n",
+       " 'Rzeczpospolita',\n",
+       " 'Art. 1.',\n",
+       " 'Rzeczpospolita Polska jest dobrem wspólnym wszystkich obywateli.']"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "filtered.take(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "counts = filtered \\\n",
+    "    .flatMap(lambda line: line.split(\" \")) \\\n",
+    "    .map(lambda word: (word, 1)) \\\n",
+    "    .reduceByKey(lambda acc, item: acc + item)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('(Dz.', 2),\n",
+       " ('(dobra', 1),\n",
+       " ('(dostęp', 1),\n",
+       " ('(godność', 1),\n",
+       " ('(humanitarne', 1)]"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "counts.takeOrdered(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('i', 173), ('w', 127), ('Rozdział', 75), ('—', 60), ('Art.', 57)]"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "counts.takeOrdered(5, key=lambda x: -x[1])"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -311,7 +357,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.5"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
