--- a/40--spark/03--rdd-operations.ipynb
+++ b/40--spark/03--rdd-operations.ipynb
@@ -9,16 +9,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Requirement already satisfied: pyspark in /usr/lib/python3.7/site-packages (2.4.5)\n",
-      "Requirement already satisfied: py4j==0.10.7 in /usr/lib/python3.7/site-packages (from pyspark) (0.10.7)\n",
-      "\u001b[33mWARNING: You are using pip version 19.2.3, however version 20.0.2 is available.\n",
-      "You should consider upgrading via the 'pip install --upgrade pip' command.\u001b[0m\n"
+      "Requirement already satisfied: pyspark in /usr/local/lib/python3.7/dist-packages (3.0.0)\r\n",
+      "Requirement already satisfied: py4j==0.10.9 in /usr/local/lib/python3.7/dist-packages (from pyspark) (0.10.9)\r\n"
      ]
     }
    ],
    "source": [
     "!pip3 install pyspark"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -40,8 +45,8 @@
     "import os\n",
     "\n",
     "spark = SparkSession.builder \\\n",
-    "    .master(\"local\") \\\n",
-    "    .appName(\"Test it 2\") \\\n",
+    "    .master(\"spark://spark-master:7077\") \\\n",
+    "    .appName(\"Spark dataframe 2\") \\\n",
     "    .getOrCreate()\n",
     "sc = spark.sparkContext\n"
    ]
@@ -61,15 +66,15 @@
        "        <div>\n",
        "            <p><b>SparkContext</b></p>\n",
        "\n",
-       "            <p><a href=\"http://10.0.2.15:4040\">Spark UI</a></p>\n",
+       "            <p><a href=\"http://6c951c9a7480:4040\">Spark UI</a></p>\n",
        "\n",
        "            <dl>\n",
        "              <dt>Version</dt>\n",
-       "                <dd><code>v2.4.5</code></dd>\n",
+       "                <dd><code>v3.0.0</code></dd>\n",
        "              <dt>Master</dt>\n",
-       "                <dd><code>local</code></dd>\n",
+       "                <dd><code>spark://spark-master:7077</code></dd>\n",
        "              <dt>AppName</dt>\n",
-       "                <dd><code>Test it 2</code></dd>\n",
+       "                <dd><code>Spark dataframe 2</code></dd>\n",
        "            </dl>\n",
        "        </div>\n",
        "        \n",
@@ -77,7 +82,7 @@
        "        "
       ],
       "text/plain": [
-       "<pyspark.sql.session.SparkSession at 0x7f12a6887a90>"
+       "<pyspark.sql.session.SparkSession at 0x7f8341532b70>"
       ]
      },
      "execution_count": 4,
@@ -163,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -172,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -322,7 +327,7 @@
        "  'obywateli.']]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -340,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -350,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -359,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -368,7 +373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -377,7 +382,7 @@
        "[(174, 'i'), (151, 'w'), (92, 'art.'), (75, 'rozdział'), (60, '—')]"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -397,23 +402,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "--2020-02-14 18:34:02--  https://raw.githubusercontent.com/bieli/stopwords/master/polish.stopwords.txt\n",
-      "Resolving raw.githubusercontent.com... 151.101.0.133, 151.101.64.133, 151.101.128.133, ...\n",
-      "Connecting to raw.githubusercontent.com|151.101.0.133|:443... connected.\n",
+      "--2020-12-12 01:19:49--  https://raw.githubusercontent.com/bieli/stopwords/master/polish.stopwords.txt\n",
+      "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 151.101.12.133\n",
+      "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|151.101.12.133|:443... connected.\n",
       "HTTP request sent, awaiting response... 200 OK\n",
       "Length: 2016 (2.0K) [text/plain]\n",
-      "Saving to: 'polish.stopwords.txt'\n",
+      "Saving to: ‘polish.stopwords.txt’\n",
       "\n",
-      "polish.stopwords.tx 100%[===================>]   1.97K  --.-KB/s    in 0s      \n",
+      "polish.stopwords.tx 100%[===================>]   1.97K  --.-KB/s    in 0.005s  \n",
       "\n",
-      "2020-02-14 18:34:03 (26.2 MB/s) - 'polish.stopwords.txt' saved [2016/2016]\n",
+      "2020-12-12 01:19:49 (395 KB/s) - ‘polish.stopwords.txt’ saved [2016/2016]\n",
       "\n"
      ]
     }
@@ -424,7 +429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -433,7 +438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -791,7 +796,7 @@
        " 'żeby']"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -802,7 +807,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -812,16 +817,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Creating a RDD from a file\n",
-    "The most common way of creating an RDD is to load it from a file. Notice that Spark's textFile can handle compressed files directly."
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -841,16 +838,24 @@
        " (23, 'rada'),\n",
        " (23, 'ministrów'),\n",
        " (19, 'wejścia'),\n",
-       " (18, 'rzeczpospolita')]"
+       " (18, 'sejm')]"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "counter.take(15)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Creating a RDD from a file\n",
+    "The most common way of creating an RDD is to load it from a file. Notice that Spark's textFile can handle compressed files directly."
    ]
   },
   {
@@ -864,7 +869,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -873,7 +878,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -883,8 +888,8 @@
        " (75, 'rozdział'),\n",
        " (60, '—'),\n",
        " (50, 'rzeczypospolitej'),\n",
-       " (33, 'prawa'),\n",
        " (33, 'ustawy'),\n",
+       " (33, 'prawa'),\n",
        " (31, 'polskiej'),\n",
        " (30, 'konstytucji'),\n",
        " (27, 'wolności'),\n",
@@ -898,10 +903,10 @@
        " (16, 'ust.'),\n",
        " (15, 'konstytucja'),\n",
        " (15, '1'),\n",
-       " (14, 'prezydent')]"
+       " (14, 'stanu')]"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -909,6 +914,22 @@
    "source": [
     "counted_words[:20]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sc.stop()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -927,7 +948,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.5"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
