update with multiple sources

--- a/80--spark/22--merge-multiple-sources.ipynb
+++ b/80--spark/22--merge-multiple-sources.ipynb
@@ -2,25 +2,45 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: pyspark==3.0.0 in /usr/local/lib/python3.7/dist-packages (3.0.0)\n",
+      "Requirement already satisfied: py4j==0.10.9 in /usr/local/lib/python3.7/dist-packages (from pyspark==3.0.0) (0.10.9)\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    }
+   ],
    "source": [
     "pip install pyspark==3.0.0"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: psycopg2-binary in /usr/local/lib/python3.7/dist-packages (2.8.6)\n",
+      "Requirement already satisfied: randomuser in /usr/local/lib/python3.7/dist-packages (1.6)\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    }
+   ],
    "source": [
     "pip install psycopg2-binary randomuser"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -140,7 +160,7 @@
     "        appName(\"pyspark-with-mongo\").\\\n",
     "        master(\"spark://spark-master:7077\").\\\n",
     "        config(\"spark.executor.memory\", \"1g\").\\\n",
-    "        config(\"spark.mongodb.input.uri\",\"mongodb://mongodb:27017/datascience.movies\").\\\n",
+    "        config(\"spark.mongodb.input.uri\",\"mongodb://mongodb:27017/ecommerce.orders\").\\\n",
     "        config(\"spark.jars.packages\", \"org.mongodb.spark:mongo-spark-connector_2.12:3.0.0,org.postgresql:postgresql:42.2.18\").\\\n",
     "        config('spark.driver.extraClassPath', working_directory). \\\n",
     "        config('spark.jars', working_directory).\\\n",
@@ -151,16 +171,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "        <div>\n",
+       "            <p><b>SparkContext</b></p>\n",
+       "\n",
+       "            <p><a href=\"http://3a367d2ca5a9:4041\">Spark UI</a></p>\n",
+       "\n",
+       "            <dl>\n",
+       "              <dt>Version</dt>\n",
+       "                <dd><code>v3.0.0</code></dd>\n",
+       "              <dt>Master</dt>\n",
+       "                <dd><code>spark://spark-master:7077</code></dd>\n",
+       "              <dt>AppName</dt>\n",
+       "                <dd><code>pyspark-with-mongo</code></dd>\n",
+       "            </dl>\n",
+       "        </div>\n",
+       "        "
+      ],
+      "text/plain": [
+       "<SparkContext master=spark://spark-master:7077 appName=pyspark-with-mongo>"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "sc.stop()"
+    "sc"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -177,16 +226,84 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "root\n",
+      " |-- id: integer (nullable = true)\n",
+      " |-- email: string (nullable = true)\n",
+      " |-- email_canonical: string (nullable = true)\n",
+      " |-- first_name: string (nullable = true)\n",
+      " |-- last_name: string (nullable = true)\n",
+      " |-- gender: string (nullable = true)\n",
+      " |-- created_at: timestamp (nullable = true)\n",
+      " |-- updated_at: timestamp (nullable = true)\n",
+      " |-- phone_number: string (nullable = true)\n",
+      " |-- subscribed_to_newsletter: string (nullable = true)\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "customers.printSchema()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+--------------------+---+\n",
+      "|               email| id|\n",
+      "+--------------------+---+\n",
+      "|enzo.jean@example...|  1|\n",
+      "|hillebrand.vander...|  2|\n",
+      "|isabella.freeman@...|  3|\n",
+      "|louka.noel@exampl...|  4|\n",
+      "|kjell.hoffmann@ex...|  5|\n",
+      "|jessica.perkins@e...|  6|\n",
+      "|alix.dupuis@examp...|  7|\n",
+      "|miriam.barros@exa...|  8|\n",
+      "|ines.gil@example.com|  9|\n",
+      "|maxime.garnier@ex...| 10|\n",
+      "+--------------------+---+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "customers.select('email', 'id').show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: pymongo in /usr/local/lib/python3.7/dist-packages (3.11.2)\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    }
+   ],
+   "source": [
+    "pip install pymongo"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -198,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -213,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -224,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -235,9 +352,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+--------------------+-----------+--------------------+-----+\n",
+      "|                 _id|customer_id|               lines|total|\n",
+      "+--------------------+-----------+--------------------+-----+\n",
+      "|[6001ae6e8f657fd0...|          4|[[130, 4], [133, ...| 4375|\n",
+      "|[6001ae6e8f657fd0...|          8|          [[101, 4]]| 3113|\n",
+      "|[6001ae6e8f657fd0...|          2|            [[5, 1]]| 4508|\n",
+      "|[6001ae6e8f657fd0...|          0|[[81, 2], [177, 4...| 2171|\n",
+      "|[6001ae6e8f657fd0...|          0|[[41, 3], [115, 3...| 2297|\n",
+      "|[6001ae6e8f657fd0...|          1|[[186, 2], [19, 4...| 4654|\n",
+      "|[6001ae6e8f657fd0...|          2| [[59, 2], [147, 5]]| 3468|\n",
+      "|[6001ae6e8f657fd0...|         10|[[170, 2], [74, 5...| 3674|\n",
+      "|[6001ae6e8f657fd0...|          8|[[151, 4], [175, 5]]| 4780|\n",
+      "|[6001ae6e8f657fd0...|          4|[[172, 4], [60, 2...| 3271|\n",
+      "+--------------------+-----------+--------------------+-----+\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "orders.select('*').show()"
    ]
@@ -246,28 +385,150 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "###\n",
+    "### pytania\n",
     "* Który customer zakupił za największą kwotę\n",
     "* Czy kupujący posiadający subskrypcję do newslettera kupują więcej?"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pyspark.sql import SQLContext\n",
+    "sqlContext = SQLContext(sc)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "orders.registerTempTable(\"orders\")\n",
+    "customers.registerTempTable(\"customers\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'sc' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-1-8d3513b7698b>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0msc\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstop\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m: name 'sc' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+---+-----+\n",
+      "| id|total|\n",
+      "+---+-----+\n",
+      "|  2| 7976|\n",
+      "|  8| 7893|\n",
+      "|  4| 7646|\n",
+      "|  1| 4654|\n",
+      "| 10| 3674|\n",
+      "+---+-----+\n",
+      "\n"
      ]
     }
    ],
+   "source": [
+    "top_buyers = sqlContext.sql('''\n",
+    "    select c.id, sum(o.total) as total\n",
+    "        from orders o\n",
+    "        JOIN customers c on o.customer_id = c.id\n",
+    "        group by c.id\n",
+    "        order by total DESC\n",
+    "''').show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "toBeAwarded = sqlContext.sql('''\n",
+    "    select \n",
+    "        rank() over (order by total desc) as place,\n",
+    "        first_name, \n",
+    "        last_name,\n",
+    "        total \n",
+    "    from (\n",
+    "        select c.id, sum(o.total) as total\n",
+    "        from orders o\n",
+    "        JOIN customers c on o.customer_id = c.id\n",
+    "        group by c.id\n",
+    "        order by total DESC\n",
+    "    ) as t1 join customers c on t1.id = c.id order by total desc\n",
+    "    \n",
+    "''')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+-----+----------+-------------+-----+\n",
+      "|place|first_name|    last_name|total|\n",
+      "+-----+----------+-------------+-----+\n",
+      "|    1|Hillebrand|Van der Weele| 7976|\n",
+      "|    2|    Miriam|       Barros| 7893|\n",
+      "|    3|     Louka|         Noel| 7646|\n",
+      "|    4|      Enzo|         Jean| 4654|\n",
+      "|    5|    Maxime|      Garnier| 3674|\n",
+      "+-----+----------+-------------+-----+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "toBeAwarded.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "customers = toBeAwarded.collect()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[Row(place=1, first_name='Hillebrand', last_name='Van der Weele', total=7976),\n",
+       " Row(place=2, first_name='Miriam', last_name='Barros', total=7893),\n",
+       " Row(place=3, first_name='Louka', last_name='Noel', total=7646),\n",
+       " Row(place=4, first_name='Enzo', last_name='Jean', total=4654),\n",
+       " Row(place=5, first_name='Maxime', last_name='Garnier', total=3674)]"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "customers"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "sc.stop()"
    ]
